# RadGap

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/foundation-model-adaptation/: SKILL.md
.claude/skills/medical-imaging-data/: SKILL.md
.claude/skills/medical-ml-evaluation/: SKILL.md
.claude/skills/radiology-preprocessing/: SKILL.md
.claude/skills/reproducible-ml-research/: SKILL.md
.github/workflows/: ci.yml
configs/: config.yaml
configs/backbone/: biomedclip.yaml  densenet.yaml  dinov2.yaml  rad_dino.yaml
configs/dataset/: chexpert_plus.yaml  mura.yaml  nih.yaml
configs/experiment/: gen_gap.yaml  in_dist.yaml
experiments/results/: auroc_in_distribution.csv
notebooks/: 01_eda_and_label_harmonization.ipynb  01_eda_and_label_harmonization.py  02_preprocessing_and_augmentation.ipynb  02_preprocessing_and_augmentation.py  03_embeddings_and_linear_probing.ipynb  03_embeddings_and_linear_probing.py  04_cross_dataset_generalization_gap.ipynb  04_cross_dataset_generalization_gap.py  05_label_efficiency.ipynb  05_label_efficiency.py  06_fairness_audit.ipynb  06_fairness_audit.py
scripts/: build_available_manifest.py  build_manifest.py  check_env.py  download_aimi.py  download_nih.py  extract_embeddings.py  train_probe.py  validate_manifests.py
src/radgap/: __init__.py
src/radgap/data/: __init__.py  harmonize.py  image_dataset.py  label_map.py  loaders.py  manifest.py  paths.py  schema.py  splits.py  uncertainty.py
src/radgap/eval/: __init__.py  metrics.py
src/radgap/models/: __init__.py  backbones.py  embeddings.py  heads.py
src/radgap/preprocessing/: __init__.py
src/radgap/utils/: __init__.py  logging.py  seeding.py
tests/: test_label_map.py  test_loaders.py  test_manifest.py  test_metrics.py  test_paths.py  test_seeding.py  test_smoke.py  test_splits.py  test_uncertainty.py
