[project]
name = "radgap"
version = "0.0.1"
description = "Benchmark reproductible de généralisation, efficacité-label et équité des foundation models en radiologie"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Thomas Berchet", email = "berchet.thomas@gmail.com" }]

# NOTE: bornes basses pour itérer ; à figer en versions exactes (`uv pip freeze`) avant les runs finaux (M8).
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "transformers>=4.44",
    "open_clip_torch>=2.24",
    "torchxrayvision>=1.2",
    "peft>=0.11",
    "pydicom>=2.4",
    "opencv-python-headless>=4.9",
    "pillow>=10.0",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "redivis>=0.10",
    "kagglehub>=0.3",
    "scikit-learn>=1.4",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.17",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "grad-cam>=1.5",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.5", "jupytext>=1.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radgap"]

# --- torch / torchvision via l'index CUDA (RTX 4080 Super, CUDA 12.x sur WSL) ---
[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.isort]
# Détermine first-party explicitement : la détection auto diffère local vs CI
# (radgap vivant sous src/ peut être classé third-party selon l'environnement).
known-first-party = ["radgap"]

[tool.ruff.lint.per-file-ignores]
# Notebooks jupytext (format percent) : imports par cellule (E402) et builtins Jupyter
# comme display() (F821) sont normaux.
"notebooks/*" = ["E402", "F821", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
